crates/artemis_domain/src/snapshots/artemis_domain__context__tests__update_image_tool_calls_mixed_content_with_images.snap
---
source: crates/artemis_domain/src/context.rs
expression: actual
---
messages:
  - text:
      role: System
      content: System message
  - text:
      role: User
      content: User question
  - text:
      role: Assistant
      content: Assistant response
  - tool:
      name: mixed_tool
      call_id: call1
      output:
        is_error: false
        values:
          - text: Before image
          - text: "[The image with ID 0 will be sent as an attachment in the next message]"
          - text: After image
          - empty
  - text:
      role: User
      content: "[Here is the image attachment for ID 0]"
  - image:
      url: "data:image/png;base64,test123"
      mime_type: image/png
